Fixed letter spacing

--- a/src/main.css
+++ b/src/main.css
@@ -39,4 +39,5 @@
 
 body {
   font-family: 'Balboa', sans-serif;
+  letter-spacing: 0.05em;
 }
